# mecanik

./: Cargo.toml  README.md  shell.nix
.cargo/: config.toml
src/: config.rs  loggers.rs  main.rs  model.rs
ui/: bar.slint  dash.slint  gauge.slint  main.slint  value.slint
