[package]
name = "mecanik"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = "0.2.4"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serialport = "4.7.2"
slint = "1.12.1"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["rt", "time"] }


[build-dependencies]
slint-build = "1.12.1"
